<resources>
    <string name="app_name">IM</string>
    <string name="user">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="name">用户名称</string>
    <string name="check_password">确认密码</string>
    <string name="messages">消息</string>
    <string name="friends">好友</string>
    <string name="groups">群组</string>
    <string name="add_friend_request">发起添加好友请求</string>
    <string name="create_group">创建群组</string>
    <string name="group_name">群名</string>
    <string name="join_group">加入群组</string>
    <string name="search_id">id</string>
    <string name="about">关于</string>
    <string name="logout">退出</string>
</resources>
